feat: add new stuff

--- a/roles/linux/tasks/install-apt.yml
+++ b/roles/linux/tasks/install-apt.yml
@@ -23,5 +23,7 @@
       - libreadline8
       - python-tk
       - tk-dev
+      - ripgrep
+      - snapd
     update_cache: true
     state: present
